--- a/theme/base.html
+++ b/theme/base.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="initial-scale=1.0">
         <link rel="stylesheet" href="css/GitHub2.css">
         <link rel="stylesheet" href="css/style.css">
-        <title></title>
+        <title>My Blog</title>
     </head>
     <body>
         <header></header>
