--- a/theme/base.html
+++ b/theme/base.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1.0">
+        <meta name="description" content="">
+        <title>My Blog</title>
         <link rel="stylesheet" href="css/GitHub2.css">
         <link rel="stylesheet" href="css/style.css">
-        <title>My Blog</title>
     </head>
     <body>
         <header></header>
