--- a/theme/base.html
+++ b/theme/base.html
@@ -7,6 +7,15 @@
         <link rel="stylesheet" href="css/GitHub2.css">
         <link rel="stylesheet" href="css/style.css">
         <title>My Blog</title>
+        <!--
+        <script>
+          function more() {
+            let lis = document.getElementsByTagName('nav')[0].getElementsByTagName('ul')[0].getElementsByTagName('li');
+            for (let i = 0; i < lis.length; i++ ) { lis[i].setAttribute('style', 'display: list-item;'); }
+            document.getElementById('more').setAttribute('style', 'display: none;');
+          }
+        </script>
+        -->
     </head>
     <body>
         <header></header>
@@ -14,6 +23,7 @@
         <aside></aside>
         <h4>What to Read Next...</h4>
         <nav></nav>
+        <!-- <p id="more"><a href="#" onclick="javascript:more(); return false;">More &raquo;</a></p> -->
         <footer></footer>
     </body>
 </html>
